--- a/game.html
+++ b/game.html
@@ -10,6 +10,9 @@
             margin: 0 auto;
             background: #70c5ce;
         }
+        * {
+      touch-action: manipulation;
+  }
     </style>
 </head>
 <body>
