fixed links whooops!! :3

--- a/aquarium_layout.html
+++ b/aquarium_layout.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="src/updatedCSS.css">
   <script src="src/updatedJS.js"></script>
   <title>Temp Unofficial WMBC</title>
+  <link rel="icon" type="image/x-icon" href="/imgs/wmbc/logo-text-225x255.png">
   <script> const STATION_ID = "s7a5fb9da6";
+
 
 
     //on load
