--- a/radio_listener.html
+++ b/radio_listener.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="src/somecss.css">
 
   <title>Temp Unofficial WMBC</title>
-  <link rel="icon" type="image/x-icon" href="/src/logo_225x255.png">
+  <link rel="icon" type="image/x-icon" href="/imgs/wmbc/logo-text-225x255.png">
 
 
 
