--- a/radio_listener.html
+++ b/radio_listener.html
@@ -414,7 +414,7 @@ Z = closepath (close the path) -->
       </div>
       <div id="theShowsInfoPage" class="container" style="margin-bottom:20px; display:none;">
         <div class="showTitleBox">
-          <div class="innerTitleElem" style="margin-right:0px; padding-right:0px;">
+          <div class="innerTitleElem" style="margin-right:0px; padding-right:0px; max-width:50%">
             <h1 id="showName" style="margin-right:0px; padding-right:0px;">Example Show Name</h1>
           </div>
 
