FIXED LAST BUGS WHOOPS

--- a/radio_listener.html
+++ b/radio_listener.html
@@ -469,7 +469,7 @@ Z = closepath (close the path) -->
 
     </div>
   </div>
-  <footer class="footer">
+  <footer class="footer" style="max-width:100%">
     <p><input id="startTimerButton" type="button" value="WMBC's Web Player," style="display: none;"> <input id="addClock" type="button" value=" made by will :3"></p>
     </p>
   </footer>
