--- a/aquarium_layout.html
+++ b/aquarium_layout.html
@@ -3,7 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv='refresh' content='0; URL=./radio_listener.html'>
+  <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate" max-age="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="src/somecss.css">
