--- a/radio_listener.html
+++ b/radio_listener.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta http-equiv='refresh' content='0; URL=https://wmbc-radio.github.io/'>
   <meta charset="UTF-8">
   <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
