--- a/ShowDownloader.html
+++ b/ShowDownloader.html
@@ -69,24 +69,24 @@
         </div>
 
     <script>
-    document.getElementById('search_button').addEventListener('click', function() {
-    const selectedShow = "Perfect Sound Forever"
+   document.getElementById('search_button').addEventListener('click', function() {
+    const selectedShow = document.getElementById('show_name').value;
     const recFilesContainer = document.getElementById('rec_files_container');
 
     // --- Replace with your actual ngrok URL ---
     const ngrokBaseUrl = 'https://5bd6-2620-0-5301-2101-4ea8-e4f5-b0b7-32ef.ngrok-free.app'; // e.g. https://abcdef123456.ngrok-free.app
     const searchScriptUrl = `${ngrokBaseUrl}/search_recs.php`;
-    const downloadScriptUrl = `${ngrokBaseUrl}/download_rec.php`; // Also define for the download part
+    const downloadScriptUrl = `${ngrokBaseUrl}/download_rec.php`;
 
     // Clear previous results
     recFilesContainer.innerHTML = '<p>Searching...</p>';
 
     // Use Fetch API to send the selected show name to search_recs.php
-    fetch(searchScriptUrl, { // <-- Use the full ngrok URL
+    fetch(searchScriptUrl, { // <-- Use the full ngrok URL for search
         method: 'POST',
         headers: {
             'Content-Type': 'application/x-www-form-urlencoded',
-            'ngrok-skip-browser-warning': '69420' // <-- Add the custom header
+            'ngrok-skip-browser-warning': '69420' // <-- Add the custom header for search
         },
         body: 'show_name=' + encodeURIComponent(selectedShow)
     })
@@ -104,9 +104,64 @@
             recFilesSelect.addEventListener('change', function() {
                 const selectedFilePath = this.value;
                 if (selectedFilePath) {
-                    // Trigger download by redirecting the browser
-                    // Use the full ngrok URL for the download script too
-                    window.location.href = `${downloadScriptUrl}?filepath=` + encodeURIComponent(selectedFilePath);
+                    // --- Download using Fetch API ---
+                    fetch(`<span class="math-inline">\{downloadScriptUrl\}?filepath\=</span>{encodeURIComponent(selectedFilePath)}`, { // <-- Use the full ngrok URL for download GET request
+                        method: 'GET', // File downloads typically use GET
+                        headers: {
+                            'ngrok-skip-browser-warning': '69420' // <-- Add the custom header for download fetch
+                            // Content-Type is not typically needed for GET downloads
+                        }
+                    })
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error('Download failed: ' + response.statusText);
+                        }
+                        // Try to get the filename from the Content-Disposition header
+                        const contentDisposition = response.headers.get('Content-Disposition');
+                        let filename = 'downloaded-file'; // Default filename
+                        if (contentDisposition) {
+                            // Extract filename from header, e.g., attachment; filename="myfile.txt"
+                            const filenameMatch = contentDisposition.match(/filename="(.+)"/);
+                            if (filenameMatch && filenameMatch.length > 1) {
+                                filename = filenameMatch[1];
+                            } else {
+                                // Handle cases where filename isn't quoted or is in a different format
+                                const basicFilenameMatch = contentDisposition.match(/filename=(.+)/);
+                                 if (basicFilenameMatch && basicFilenameMatch.length > 1) {
+                                    filename = basicFilenameMatch[1];
+                                 }
+                            }
+                        } else {
+                            // Fallback if Content-Disposition header is missing - try extracting from original file path
+                            const parts = selectedFilePath.split(/[\\/]/); // Split by / or \
+                            filename = parts.pop() || filename; // Take the last part as filename
+                        }
+
+
+                        return response.blob().then(blob => ({ blob, filename })); // Get response as Blob and pass filename
+                    })
+                    .then(({ blob, filename }) => {
+                        // Create a temporary link element to trigger download
+                        const url = window.URL.createObjectURL(blob);
+                        const a = document.createElement('a');
+                        a.style.display = 'none';
+                        a.href = url;
+                        a.download = filename; // Set the filename for the download
+
+                        document.body.appendChild(a);
+                        a.click(); // Programmatically click the link
+
+                        // Clean up the temporary URL and element
+                        window.URL.revokeObjectURL(url);
+                        document.body.removeChild(a);
+
+                        console.log('Download initiated successfully.');
+                    })
+                    .catch(error => {
+                        console.error('Download error:', error);
+                        alert('Failed to download file: ' + error.message);
+                    });
+                    // --- End Download using Fetch API ---
                 }
             });
         }
