--- a/radio_listener.html
+++ b/radio_listener.html
@@ -160,6 +160,7 @@ Z = closepath (close the path) -->
     <div class="player">
       <!-- player here -->
       <h2 style="text-align: center">Now Playing:</h2>
+      <a href="ShowDownloader.html" id="downloadLink"> DOWNLOAD SHOWS HERE</a>
       <div class="radioplayer" data-src="http://streams.radio.co/s7a5fb9da6/listen" data-autoplay="false"
         data-playbutton="false" data-volumeslider="false" data-elapsedtime="false" data-nowplaying="true"
         data-showplayer="true" data-volume="50">
