--- a/ShowDownloader.html
+++ b/ShowDownloader.html
@@ -70,7 +70,7 @@
 
     <script>
     document.getElementById('search_button').addEventListener('click', function() {
-    const selectedShow = "Perfect Sound Forever"
+    const selectedShow = document.getElementById('show_name').value;
     const recFilesContainer = document.getElementById('rec_files_container');
 
     // --- Replace with your actual ngrok URL ---
@@ -118,7 +118,7 @@
 });
 
 document.getElementById('search_button').addEventListener('click', function() {
-    const selectedShow = "Perfect Sound Forever"
+    const selectedShow = document.getElementById('show_name').value;
     const recFilesContainer = document.getElementById('rec_files_container');
 
     // --- Replace with your actual ngrok URL ---
@@ -166,7 +166,7 @@ document.getElementById('search_button').addEventListener('click', function() {
 });
 
 document.getElementById('search_button').addEventListener('click', function() {
-    const selectedShow = "Perfect Sound Forever"
+    const selectedShow = document.getElementById('show_name').value;
     const recFilesContainer = document.getElementById('rec_files_container');
 
     // --- Replace with your actual ngrok URL ---
